# discord-logger

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
