[tool.poetry]
name = "discord-logger"
version = "0.1.0"
description = ""
authors = ["sonokr <ryotakusunoki@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
"discord.py" = {extras = ["voice"], version = "^1.7.3"}
"dislash.py" = "^1.4.9"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
